<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="225dp"
        android:layout_height="54dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="casual"
        android:text="@string/title_app"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAndroid"
        android:layout_width="116dp"
        android:layout_height="91dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="139dp"
        android:contentDescription="@string/img_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:srcCompat="@drawable/icons8_android_os_200" />

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#7D3BE8"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_1"
        android:textSize="20sp"
        app:icon="@drawable/baseline_airplanemode_inactive_24"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAndroid" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#E66464"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_2"
        android:textAlignment="inherit"
        android:textSize="20sp"
        app:icon="@drawable/baseline_refresh_24"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#9A9393"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_3"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#314A55"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#3E83BA"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="276dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#459848"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/txt_btn_6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:icon="@drawable/baseline_pause_circle_24"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>